@@ -1,0 +1,4 @@
+2008-03-24  Bertrand Lorentz <bertrand.lorentz@gmail.com> 
+
+	* POTFILES.in: Fix make distcheck.
+
